--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<javax.inject.version>1</javax.inject.version>
+		<loombok.version>1.16.18</loombok.version>
+		<junit.version>4.12</junit.version>
+		<liquibase.version>3.5.3</liquibase.version>
+		<hikari.version>2.7.4</hikari.version>
+		<spring.data.version>1.5.2.RELEASE</spring.data.version>
+		<hibernate.validator.version>4.0.2.GA</hibernate.validator.version>
+		<mysql.driver.version>8.0.8-dmr</mysql.driver.version>
+		<spring.test.version>2.5</spring.test.version>
 	</properties>
 
 	<modules>
@@ -25,6 +33,7 @@
 		<module>test-ui</module>
 		<module>test-model</module>
 		<module>test-service</module>
+		<module>test-config</module>
 	</modules>
 
 	<dependencies>
@@ -34,6 +43,60 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>${javax.inject.version}</version>
+		</dependency>
+
+
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${loombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- Junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Liquibase -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>${liquibase.version}</version>
+		</dependency>
+
+		<!-- HikariCP -->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>${hikari.version}</version>
+		</dependency>
+
+		<!-- Spring Data -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring.data.version}</version>
+		</dependency>
+
+
+		<!-- MySQL Driver -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.driver.version}</version>
+		</dependency>
+
+		<!-- Spring test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.test.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
