Adding Integration tests + Maven Pom refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+		<javax.inject.version>1</javax.inject.version>
+		<loombok.version>1.16.18</loombok.version>
+		<junit.version>4.12</junit.version>
+		<liquibase.version>3.5.3</liquibase.version>
+		<hikari.version>2.7.4</hikari.version>
+		<spring.data.version>1.5.2.RELEASE</spring.data.version>
+		<spring.test.version>1.5.2.RELEASE</spring.test.version>
+		<hibernate.validator.version>4.0.2.GA</hibernate.validator.version>
+		<mysql.driver.version>8.0.8-dmr</mysql.driver.version>
+		<dbunit.version>1.2.1</dbunit.version>
+	</properties>
+
+
+
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.test</groupId>
 	<artifactId>test</artifactId>
@@ -13,19 +32,7 @@
 		<version>1.5.2.RELEASE</version>
 	</parent>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<javax.inject.version>1</javax.inject.version>
-		<loombok.version>1.16.18</loombok.version>
-		<junit.version>4.12</junit.version>
-		<liquibase.version>3.5.3</liquibase.version>
-		<hikari.version>2.7.4</hikari.version>
-		<spring.data.version>1.5.2.RELEASE</spring.data.version>
-		<hibernate.validator.version>4.0.2.GA</hibernate.validator.version>
-		<mysql.driver.version>8.0.8-dmr</mysql.driver.version>
-		<spring.test.version>2.5</spring.test.version>
-	</properties>
+
 
 	<modules>
 		<module>test-main</module>
@@ -93,11 +100,19 @@
 
 		<!-- Spring test -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<version>${spring.test.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- DBUnit -->
+		<dependency>
+			<groupId>com.github.springtestdbunit</groupId>
+			<artifactId>spring-test-dbunit</artifactId>
+			<version>${dbunit.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
