--- a/test-main/src/test/resources/application-test.properties
+++ b/test-main/src/test/resources/application-test.properties
@@ -1,12 +1,8 @@
-# Spring Boot Config
-server.port=5000
-# Database Config
-
 # hikariCP
 
 # Spring Data Source
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test_fullstack?createDatabaseIfNotExist=true&nullNamePatternMatchesAll=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test_fullstack_test?createDatabaseIfNotExist=true&nullNamePatternMatchesAll=true
 spring.datasource.username=test-fullstack
 spring.datasource.password=test-fullstack
 spring.datasource.poolName=SpringBootHikariCP
@@ -22,3 +18,11 @@ spring.datasource.max-open-prepared-statements=250
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#liquibase
+liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+liquibase.default-schema=test_fullstack_test
+liquibase.user=test-fullstack
+liquibase.password=test-fullstack
+
+default-jdbcUrl=jdbc:mysql://localhost:3306/test_fullstack_test?createDatabaseIfNotExist=true&nullNamePatternMatchesAll=true
