--- a/test-api/pom.xml
+++ b/test-api/pom.xml
@@ -10,6 +10,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <spring.test.version>1.5.2.RELEASE</spring.test.version>
+        <dbunit.version>1.2.1</dbunit.version>
+    </properties>
+
+
 
     <build>
         <plugins>
@@ -56,23 +62,25 @@
 
     <dependencies>
 
-        <!-- Test -->
+        <!-- Test Service -->
+        <dependency>
+            <groupId>com.test</groupId>
+            <artifactId>test-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Test Model -->
         <dependency>
             <groupId>com.test</groupId>
             <artifactId>test-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.test</groupId>
-            <artifactId>test-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
