--- a/test-config/pom.xml
+++ b/test-config/pom.xml
@@ -15,10 +15,13 @@
 
 
     <dependencies>
+        <!-- MySQL Driver -->
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
     </dependencies>
 
 
