--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -55,16 +55,17 @@
 
     <dependencies>
 
+        <!-- Test Model -->
         <dependency>
             <groupId>com.test</groupId>
             <artifactId>test-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- Spring Framework -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
     </dependencies>
