--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 		<spring.test.version>1.5.2.RELEASE</spring.test.version>
 		<hibernate.validator.version>4.0.2.GA</hibernate.validator.version>
 		<mysql.driver.version>8.0.8-dmr</mysql.driver.version>
-		<dbunit.version>1.2.1</dbunit.version>
+		<spring.dbunit.version>1.2.1</spring.dbunit.version>
+		<gson.version>2.8.2</gson.version>
+		<dbunit.version>2.5.4</dbunit.version>
 	</properties>
 
 
@@ -110,9 +112,25 @@
 		<dependency>
 			<groupId>com.github.springtestdbunit</groupId>
 			<artifactId>spring-test-dbunit</artifactId>
-			<version>${dbunit.version}</version>
+			<version>${spring.dbunit.version}</version>
+			<scope>test</scope>
 		</dependency>
 
+		<!-- GSON -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- DBUnit -->
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>${dbunit.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
