Client (POST, DELETE, GET)

--- a/test-config/src/main/resources/application.properties
+++ b/test-config/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.datasource.max-open-prepared-statements=250
 
 # Spring JPA
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
