--- a/test-config/src/test/resources/application-test.properties
+++ b/test-config/src/test/resources/application-test.properties
@@ -16,8 +16,8 @@ spring.datasource.max-open-prepared-statements=250
 
 # Spring JPA
 spring.jpa.generate-ddl=false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 #liquibase
 liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
